public/indexStyle.css
*,
*::before,
*::after {
  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
  padding: 0;
  margin: 0;
}

img {
  max-width: 100%;
  display: block;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

:root {
  --color-3: #ff6161;
  --color-4: #6060f7;
  --color-5: #7acd7a;
  --color-6: #e5af0c;
  --color-7: #ad20bc;
  --color-2: #181818;
  --color-1: #e8e8e8;
  --color-8: #460394;
  --color-9: #f5f5dc;
}

.color-button {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: solid 1px black;
  margin-left: 10px;
  margin-right: 9px;
  cursor: pointer;
}

#beige {
  background-color: var(--color-9);
  color: var(--color-2);
}

#purple {
  background-color: var(--color-8);
  color: var(--color-1);
}

#white {
  background-color: var(--color-1);
}

#black {
  background-color: var(--color-2);
  color: var(--color-1);
}

#red {
  background-color: var(--color-3);
  color: var(--color-2);
}

#blue {
  background-color: var(--color-4);
  color: var(--color-1);
}

#green {
  background-color: var(--color-5);
  color: var(--color-2);
}

#orange {
  background-color: var(--color-6);
  color: var(--color-2);
}

#pink {
  background-color: var(--color-7);
  color: var(--color-1);
}

.color-button.active {
  border: 3px solid rgba(0, 0, 0, 0.62);
}

.dropdown-menu {
  display: none;
  position: absolute;
  z-index: 1;
  border-radius: 20px;
  right: 0;
  margin-right: -40px;
}

.dropdown:hover .dropdown-menu {
  display: block;
  background: #ffffff4d;
}

.dropdown-menu li a {
  display: block;
  padding: 10px;
  text-decoration: none;
}

body {
  font-family: "Poppins", monospace;
}

section {
  display: grid;
  place-items: center;
  align-content: center;
  min-height: 100vh;
}

.edit-delete {
  text-align: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 10px;
  width: 100%;
  margin-top: 30px;
}

.delete-btn {
  width: 100%;
  text-align: left;
}

.edit-note {
  padding: 6px;
  border: none;
  border-radius: 4px;
  background-color: rgb(74, 74, 74);
  text-align: center;
  justify-self: right;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  color: white !important;
  width: 30%;
}

.flex {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 2rem;
  font-size: large;
}

.hidden {
  opacity: 0;
  filter: blur(5px);
  transform: translateX(-100%);
  transition: all 1s;
}

.display {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

header {
  max-width: 1400px;
  width: 90%;
  margin-inline: auto;
}

footer {
  text-align: center;
}

form input[name="query"] {
  width: 400px;
  height: 30px;
  padding: 5px;
  margin-right: 10px;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  background-color: rgb(219, 218, 218);
}

form input[name="query"]:focus {
  outline: none;
}

header {
  padding: 10px 0;
}

.login-kb {
  text-align: center;
}

.or-line {
  min-width: 320px;
}

.submit {
  padding: 8.5px;
  width: 100%;
  margin-bottom: 20px;
  border-radius: 4px;
  border: none;
  font-weight: 400;
  font-size: medium;
  background-color: rgb(74, 74, 74);
  color: white !important;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
}
.submit:hover {
  cursor: pointer;
  background-color: rgb(47, 47, 47);
  transition: ease-in 0.2s;
}

.card-form {
  background: rgba(255, 255, 255, 0.14);
  border-radius: 10px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3);
  display: inline-block;
  padding: 4rem;
  min-height: 550px;
  width: 450px;
}

.card-form.note {
  padding: 70px;
  min-height: 680px;
  width: 50%;
}

.save-note {
  padding: 6px;
  border: none;
  border-radius: 4px;
  background-color: rgb(74, 74, 74);
  text-align: center;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  color: white !important;
  width: 30%;
}

.save-note:hover {
  background-color: rgb(47, 47, 47);
  transition: ease-in 0.2s;
}

.add-note {
  padding: 6px;
  margin-top: -5px;
  margin-bottom: 20px;
  border: none;
  border-radius: 4px;
  background-color: rgb(74, 74, 74);
  text-align: center;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  color: white !important;
  width: 10%;
}

.view-delete {
  border: none;
  background-color: rgb(244, 82, 82);
  padding: 7px;
  border-radius: 4px;
  position: absolute;
  bottom: 10px;
  left: 90px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: black;
  height: 180px;
}

.btn.btn-primary {
  position: absolute;
  bottom: 10px;
  left: 15px;
}

.card-date {
  position: absolute;
  right: 0;
  margin: 28px;
  font-size: 12px;
  color: gray;
  float: left;
}

.container-card {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5rem;
}

.edited-date {
  position: absolute;
  right: 0;
  top: 20px;
  margin-right: 0;
  font-size: 12px;
  color: gray;
}

#sortingLabel {
  margin-bottom: 5px;
}

#sortSelect {
  border: none;
  border-radius: 4px;
  padding: 2px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
}

.not-member {
  display: block;
  padding: 6px;
  margin-top: 10px;
  border-radius: 4px;
  background-color: rgb(74, 74, 74);
  text-align: center;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  color: white !important;
}

.not-member:hover {
  background-color: rgb(47, 47, 47);
  transition: ease-in 0.2s;
}

fieldset {
  border: 0;
}

.centered-fieldset {
  border: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.item-container {
  display: block;
  height: 100%;
  width: 100%;
  justify-content: space-between;
  margin-top: -25px;
}

.or-line {
  text-align: center;
}

.or-center {
  font-family: Courier, monospace;
}

.content {
  background-color: rgba(255, 255, 255, 0.71);
  outline: solid 1px rgb(255, 255, 255);
  margin-bottom: 20px;
  outline: solid 1px rgb(255, 255, 255);
  border: none;
  padding: 10px;
  border-radius: 4px;
  width: 100%;
  max-height: 450px;
  min-height: 250px;
  overflow-y: auto;
  color: black !important;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.18);
  overflow-x: hidden;
}

input[name="username"] {
  display: block;
  margin-top: 40px;
  margin-bottom: 25px;
  outline: none;
  border: none;
  padding: 10px;
  border-radius: 4px;
  width: 100%;
  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.117);
}

input[name="title"] {
  background-color: rgba(255, 255, 255, 0.71);
  margin-top: 35px;
  margin-bottom: 15px;
  outline: solid 1px rgb(255, 255, 255);
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.18);
  border: none;
  padding: 10px;
  border-radius: 4px;
  width: 100%;
}

input[name="category"] {
  background-color: rgba(255, 255, 255, 0.71);
  margin-top: 5px;
  margin-bottom: 25px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.18);
  outline: solid 1px rgb(255, 255, 255);
  border: none;
  padding: 10px;
  border-radius: 4px;
  width: 100%;
}

input[type="password"] {
  display: block;
  margin-bottom: 25px;
  outline: none;
  border: none;
  padding: 10px;
  border-radius: 4px;
  width: 100%;
  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.117);
}

.sign-today {
  margin-top: 20px;
  text-align: center;
}

.allAchievements {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
  margin: 0%;
  text-align: center;
  left: 0;
  margin-bottom: 2%;
}

.achievement-image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
}

#achievements {
  width: 15%;
  margin: 3%;
  position: relative;
  left: 0;
}

#achievementsText {
  text-align: center;
  margin-bottom: 0;
}

.achievement-image {
  background-color: #b8c1ec;
  border-radius: 20%;
  position: relative;
  width: 200px;
  height: 200px;
}

.achievement-image img {
  position: absolute;
  left: 0;
}

.achievement-image-opaque {
  opacity: 1;
}

.achievement-image-transparent {
  opacity: 0.4;
}

#achievementName {
  position: absolute;
  width: 100%;
  padding: 10px;
  text-align: center;
}

/* Live search */
#searchResults {
  position: absolute;
  width: 400px;
  list-style: none;
  padding: 0;
  margin: 0;
  background-color: white;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  z-index: 9999;
}

#searchResults li {
  cursor: pointer;
}

#searchResults li:hover {
  background-color: lightgray;
}

#searchResults li:last-child {
  border-bottom: none;
}

#searchResults a {
  text-decoration: none;
  color: #333;
  display: block;
  height: 100%;
  width: 100%;
}

#searchResults a:hover {
  background-color: #f1f1f1;
}

.dropdownMenu {
  position: relative;
  display: flex;
  align-items: center;
  float: right;
}

.dropdownMenu-content {
  display: block;
  min-width: 160px;
  z-index: 1;
}

.dropdownMenu-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

a {
  color: white;
  text-decoration: none;
}

.userName {
  font-size: 14pt;
}

.container {
  display: flex;
  flex-direction: column;
  /* align-items: center;
  justify-content: center; */
  margin-top: 3%;
}
.container-profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 3%;
}

.userContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 250px;
  height: auto;
}

.buttonContainer {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 15px;
}

#userImage {
  width: 250px;
  height: 250px;
  border-radius: 50%;
}

#inputImage {
  width: 65%;
  margin-bottom: 0;
  font-style: italic;
}

#changePhoto,
#editPhotoButton,
#deleteButton {
  border: 0.5px solid #181818;
  color: black;
  background-color: #e8e8e8;
  width: auto;
  height: 24px;
  font-style: italic;
  padding: 3px 10px;
  font-size: 10pt;
}

#inputImage {
  font-size: 10pt;
  float: left;
}

#changePhoto {
  width: 80px;
}

#editPhotoForm {
  display: none;
  margin: 10px 0px;
  height: 30px;
}

#deleteForm,
#changePhoto {
  float: right;
}

.progress-bar-container {
  width: 100%;
  height: 25px;
  background-color: white;
  border: 1px solid rgba(0, 0, 0, 0.394);
  position: relative;
  margin-top: 15px;
  border-radius: 5px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.progress-bar-container p {
  color: black;
  font-weight: bold;
  font-size: 14px;
  margin: 0;
  position: absolute;
  z-index: 1;
  cursor: default;
}

.progress-bar {
  height: 100%;
  background-color: white;
  position: absolute;
  top: 0;
  left: 0;
}

.progress-bar.red {
  background-color: #ff4136;
}

.progress-bar.orange {
  background-color: #ff851b;
}

.progress-bar.yellow {
  background-color: #ffdc00;
}

.progress-bar.green {
  background-color: #2ecc40;
}

.progress-bar.red,
.progress-bar.green,
.progress-bar.yellow,
.progress-bar.orange {
  width: 100%;
}

label {
  display: block;
}

textarea {
  width: 350px;
  min-height: 250px;
}

#testId1 {
  text-align: center;
}

.citations {
  font-style: italic;
  margin-top: 10px;
  max-width: 60%;
}

.author {
  float: right;
}

#registrationButton {
  margin-top: 10px;
  font-size: 18px;
  font-weight: bold;
}
.index-signup {
  color: rgb(0, 0, 0);
  background: rgb(181, 182, 231);
  padding: 8px;
  border-radius: 10px;
  margin-top: 10px;
}

@media (max-width: 600px) {
  .flex {
    flex-direction: column;
  }
}

